--- a/my_project/task/templates/task/home.html
+++ b/my_project/task/templates/task/home.html
@@ -14,7 +14,7 @@
 		<div class="item-row">
 
 			<a class="btn btn-sm btn-info" href="#">Update</a>
-			<a class="btn btn-sm btn-danger" href="#">Delete</a>
+			<a class="btn btn-sm btn-danger" href="">Delete</a>
 			<!-- this a tag is for task special view -->
 			<a href="{% url 'task-view' task.id %}">
 			<span>{{ task.name }}</span>
