--- a/my_project/task/templates/task/task_view.html
+++ b/my_project/task/templates/task/task_view.html
@@ -6,14 +6,14 @@
 
 	<div class="todo-list">
 	<h3>Tasks</h3>
-		<h2><strong>{{ object.name }}</strong></h2>
+		<h2><strong>{{ task_object.name }}</strong></h2>
 		<br>
 		<br>
-		<h2>{{ object.description }}</h2>
+		<h2>{{ task_object.description }}</h2>
 		<br>
-		<h2>{{ object.created_at }}</h2>
+		<h2>{{ task_object.created_at }}</h2>
 		<br>
-		<h2>{{ object.status }}</h2>
+		<h2>{{ task_object.status }}</h2>
 		<br>
 
 	<a class="btn btn-sm btn-info" href="#">Update</a>
